# sciencebeam-grobid-metadata-enricher

./: .claudeignore  .dockerignore  .gitignore  Dockerfile  Dockerfile.bench  Makefile  README.md  compose.langfuse.yml  compose.phoenix.yml  compose.vllm.yml  compose.yml  pyproject.toml
.github/workflows/: bench-all.yml  bench-model.yml  benchmark.yml  github-actions-ci.yml  qwen-bench.yml
benchmarks/: README.md  bench-train.yaml  bench.yaml  export.py  gold.py  manifest.py  predict.py  provision_azure.sh  provision_grafana.sh  score.py  score_multi.py  show_cases.py
benchmarks/grafana/: sciencebeam-bench.json
benchmarks/sql/: schema.sql
benchmarks/tests/: test_predict_llm_errors.py  test_predict_scheduling.py  test_score.py  test_show_cases.py  test_tokens.py
deploy/qwen/: build-image.sh  create-vm.sh  provision.py  qwen-bench.workflow.yml.example  qwen_pool.example.json  setup-wif.sh  startup-script-baked.sh  startup-script.sh
langfuse/clickhouse/: keeper.xml
runtime/: local_vllm_pool.json
scripts/: install_vllm_compat.sh  predict_with_retry.sh  resolve_hf_ft.py  resolve_openrouter_model.py  upload_lora_pack_to_hf.py  wait_vllm.sh
src/grobid_metadata_enricher/: __init__.py  api.py  cli.py  clients.py  crossref.py  evaluation.py  formats.py  pipeline.py  prompts.py  telemetry.py
src/grobid_metadata_enricher/static/: app.js  index.html  style.css
src/lora/: _vllm_compat.py  evaluate.py  make_dataset.py  push_to_hf.py  train.py
tests/: test_api.py  test_clients.py  test_evaluation.py  test_formats_oai_dc.py  test_formats_tei.py  test_pipeline_abstract_dedup.py  test_pipeline_identifiers.py  test_pipeline_layout_pruning.py  test_pipeline_llm_errors.py  test_pipeline_llm_selection.py  test_usage_tracking.py
