[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grobid-metadata-enricher"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
grobid-metadata-enricher = "grobid_metadata_enricher.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
